fix h3 wrap

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -38,7 +38,7 @@ h3, h4, h5, h6 {
 }
 
 h3 {
-    line-height: 0.0
+    line-height: 1.1;
 }
 
 a {
